--- a/app/all-items.html
+++ b/app/all-items.html
@@ -63,7 +63,7 @@
                         <!-- /.user-info-wrap -->
                     </div>
                     <!-- /.user-dropdown-control -->
-                    <button class="small-btn bg-red">Logout</button>
+                    <button class="btn small-btn bg-red">Logout</button>
                 </div>
                 <!-- /.user-controls -->
             </div>
