--- a/app/index.html
+++ b/app/index.html
@@ -38,8 +38,8 @@
                         <!-- /.dropdown-control -->
                     </div>
                     <!-- /.dropdown-item -->
-                    <button class="small-btn bg-green">Login</button>
-                    <button class="small-btn bg-red">Register</button>
+                    <button class="btn small-btn bg-green">Login</button>
+                    <button class="btn small-btn bg-red">Register</button>
                 </div>
                 <!-- /.user-controls -->
             </div>
