create breadcrumb, add style for breadcrumb, create aside

--- a/app/all-items.html
+++ b/app/all-items.html
@@ -72,7 +72,7 @@
         <!-- /.top-header -->
         <div class="bottom-header bg-dark-blue">
             <div class="container">
-                <nav class="header-nav text-white">
+                <nav class="header-nav">
                    <a href="index.html">Home</a>
                    <a href="#">About</a>
                    <a href="#">WordPress</a>
@@ -94,7 +94,7 @@
     <main id="main">
         <div class="inner small-inner">
             <div class="container">
-                <div class="inner-subtitle text-center text-white">
+                <div class="inner-subtitle text-center">
                     <span>Premium WordPress Themes, Web Templates and Many More ...</span>
                 </div>
                 <!-- /.inner-subtitle -->
@@ -109,6 +109,114 @@
             <!-- /.container -->
         </div>
         <!-- /.inner small-inner -->
+        <div class="content-wrapper">
+            <div class="container">
+                <ul class="breadcrumb">
+                    <li>
+                        <a href="index.html">Home</a>
+                    </li>
+                    <li class="active">Product Page</li>
+                </ul>
+                <!-- /.breadcrumb -->
+                <div class="row">
+                    <div class="col-md-3">
+                        <aside id="aside">
+                            <div class="aside-section bg-white border-grey">
+                                <h3 class="aside-title">Categories</h3>
+                                <ul class="default-chevron-list">
+                                    <li class="d-flex align-items-center">
+                                        <i class="fas fa-chevron-right"></i>
+                                        <span class="list-text">WordPress</span>
+                                        <span class="category-item-count ml-auto">(150)</span>
+                                    </li>
+                                    <li class="d-flex align-items-center">
+                                        <i class="fas fa-chevron-right"></i>
+                                        <span class="list-text">Joomla</span>
+                                        <span class="category-item-count ml-auto">(100)</span>
+                                    </li>
+                                    <li class="d-flex align-items-center">
+                                        <i class="fas fa-chevron-right"></i>
+                                        <span class="list-text">PSD</span>
+                                        <span class="category-item-count ml-auto">(50)</span>
+                                    </li>
+                                    <li class="d-flex align-items-center">
+                                        <i class="fas fa-chevron-right"></i>
+                                        <span class="list-text">Plugins</span>
+                                        <span class="category-item-count ml-auto">(60)</span>
+                                    </li>
+                                    <li class="d-flex align-items-center">
+                                        <i class="fas fa-chevron-right"></i>
+                                        <span class="list-text">Components</span>
+                                        <span class="category-item-count ml-auto">(40)</span>
+                                    </li>
+                                </ul>
+                                <!-- /.default-chevron-list -->
+                            </div>
+                            <!-- /.aside-section -->
+                            <div class="aside-section bg-white border-grey">
+                                <h3 class="aside-title">Price Range</h3>
+                            </div>
+                            <!-- /.aside-section -->
+                            <div class="aside-section bg-white border-grey">
+                                <h3 class="aside-title">Top 10 Sellers</h3>
+                            </div>
+                            <!-- /.aside-section -->
+                        </aside>
+                        <!-- /#aside -->
+                    </div>
+                    <!-- /.col-md-3 -->
+                    <div class="col-md-9">
+                        <div class="view-controls bg-white border-grey"></div>
+                        <!-- /.view-controls -->
+                        <div class="row">
+                            <div class="col-lg-4">
+                                <div class="card bg-white">
+                                    <div class="card-img">
+                                        <a href="">
+                                            <img src="" alt="">
+                                        </a>
+                                    </div>
+                                    <!-- /.card-img -->
+                                    <div class="card-description d-flex">
+                                        <div class="card-item-info">
+                                            <a href="" class="card-title"></a>
+                                            <span class="card-category">WordPress</span>
+                                        </div>
+                                        <!-- /.card-item-info -->
+                                        <span class="card-price ml-auto">$12</span>
+                                    </div>
+                                    <!-- /.card-description -->
+                                    <div class="card-author-info d-flex align-items-center">
+                                        <div class="card-author">
+                                            <img src="" alt="">
+                                            <span></span>
+                                        </div>
+                                        <!-- /.card-author -->
+                                        <ul class="product-rating ml-auto">
+                                            <li><i class="fas fa-star"></i></li>
+                                            <li><i class="fas fa-star"></i></li>
+                                            <li><i class="fas fa-star"></i></li>
+                                            <li><i class="fas fa-star"></i></li>
+                                            <li><i class="fas fa-star"></i></li>
+                                        </ul>
+                                        <!-- /.product-rating -->
+                                        <span class="product-reviews-count">05</span>
+                                    </div>
+                                    <!-- /.card-author-info -->
+                                </div>
+                                <!-- /.card -->
+                            </div>
+                            <!-- /.col-lg-4 -->
+                        </div>
+                        <!-- /.row -->
+                    </div>
+                    <!-- /.col-md-9 -->
+                </div>
+                <!-- /.row -->
+            </div>
+            <!-- /.container -->
+        </div>
+        <!-- /.content-wrapper -->
     </main>
     <!-- /#main -->
 
