--- a/app/index.html
+++ b/app/index.html
@@ -48,7 +48,7 @@
         <!-- /.top-header -->
         <div class="bottom-header bg-dark-blue">
             <div class="container">
-                <nav class="header-nav text-white">
+                <nav class="header-nav">
                    <a href="index.html">Home</a>
                    <a href="#">About</a>
                    <a href="#">WordPress</a>
@@ -70,8 +70,8 @@
     <main id="main">
         <div class="inner">
             <div class="container">
-                <h1 class="text-center text-white">Welcome To Foxtar Market Place!</h1>
-                <div class="inner-subtitle text-center text-white">
+                <h1 class="text-center">Welcome To Foxtar Market Place!</h1>
+                <div class="inner-subtitle text-center">
                     <span>Premium WordPress Themes, Web Templates and Many More ...</span>
                 </div>
                 <!-- /.inner-subtitle -->
