--- a/app/all-items.html
+++ b/app/all-items.html
@@ -162,7 +162,7 @@
                                 <div class="card bg-white">
                                     <div class="card-img">
                                         <a href="#">
-                                            <img src="img/aside-card-item-img.jpg" alt="">
+                                            <img src="img/card-item-img.jpg" alt="">
                                         </a>
                                     </div>
                                     <!-- /.card-img -->
@@ -196,7 +196,7 @@
                                 <div class="card bg-white">
                                     <div class="card-img">
                                         <a href="#">
-                                            <img src="img/aside-card-item-img.jpg" alt="">
+                                            <img src="img/card-item-img.jpg" alt="">
                                         </a>
                                     </div>
                                     <!-- /.card-img -->
@@ -230,7 +230,7 @@
                                 <div class="card bg-white">
                                     <div class="card-img">
                                         <a href="#">
-                                            <img src="img/aside-card-item-img.jpg" alt="">
+                                            <img src="img/card-item-img.jpg" alt="">
                                         </a>
                                     </div>
                                     <!-- /.card-img -->
