add range slider

--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header id="header">
-        <div class="top-header">
+        <div class="top-header bg-white">
             <div class="container d-flex align-items-center">
                 <div class="logo">
                     <a href="index.html">
@@ -89,316 +89,7 @@
         <section class="newest-products default-section">
             <div class="container-fluid">
                 <h2 class="title text-center">Let’s Check Out Our Newest Release Products</h2>
-                <div class="all-items-wrap">
-                    <div class="row">
-                        <div class="col-lg-3">
-                            <div class="card bg-white">
-                                <div class="card-img">
-                                    <a href="#">
-                                        <img src="img/card-item-img.jpg" alt="">
-                                    </a>
-                                </div>
-                                <!-- /.card-img -->
-                                <div class="card-description d-flex">
-                                    <div class="card-item-info">
-                                        <a href="#" class="card-title">WISTIA Corporate</a>
-                                        <span class="card-category">WordPress</span>
-                                    </div>
-                                    <!-- /.card-item-info -->
-                                    <span class="card-price ml-auto">$59</span>
-                                </div>
-                                <!-- /.card-description -->
-                                <div class="card-author-info d-flex align-items-center">
-                                    <div class="card-author d-flex align-items-center">
-                                        <img src="img/user-avatar.png" alt="">
-                                        <span>PsdBosS</span>
-                                    </div>
-                                    <!-- /.card-author -->
-                                    <ul class="product-rating ml-auto align-self-start">
-                                        <li><i class="fas fa-star"></i></li>
-                                        <li><i class="fas fa-star"></i></li>
-                                        <li><i class="fas fa-star"></i></li>
-                                        <li><i class="fas fa-star"></i></li>
-                                        <li><i class="fas fa-star"></i></li>
-                                    </ul>
-                                    <!-- /.product-rating -->
-                                    <span class="product-reviews-count">05</span>
-                                </div>
-                                <!-- /.card-author-info -->
-                            </div>
-                            <!-- /.card -->
-                        </div>
-                        <!-- /.col-lg-3 -->
-                        <div class="col-lg-3">
-                            <div class="card bg-white">
-                                <div class="card-img">
-                                    <a href="#">
-                                        <img src="img/card-item-img.jpg" alt="">
-                                    </a>
-                                </div>
-                                <!-- /.card-img -->
-                                <div class="card-description d-flex">
-                                    <div class="card-item-info">
-                                        <a href="#" class="card-title">Cartoon Face</a>
-                                        <span class="card-category">Illsatration</span>
-                                    </div>
-                                    <!-- /.card-item-info -->
-                                    <span class="card-price ml-auto">$10</span>
-                                </div>
-                                <!-- /.card-description -->
-                                <div class="card-author-info d-flex align-items-center">
-                                    <div class="card-author d-flex align-items-center">
-                                        <img src="img/user-avatar.png" alt="">
-                                        <span>Mikestro</span>
-                                    </div>
-                                    <!-- /.card-author -->
-                                    <ul class="product-rating ml-auto align-self-start">
-                                        <li><i class="fas fa-star"></i></li>
-                                        <li><i class="fas fa-star"></i></li>
-                                        <li><i class="fas fa-star"></i></li>
-                                        <li><i class="fas fa-star"></i></li>
-                                        <li><i class="fas fa-star"></i></li>
-                                    </ul>
-                                    <!-- /.product-rating -->
-                                    <span class="product-reviews-count">05</span>
-                                </div>
-                                <!-- /.card-author-info -->
-                            </div>
-                            <!-- /.card -->
-                        </div>
-                        <!-- /.col-lg-3 -->
-                        <div class="col-lg-3">
-                            <div class="card bg-white">
-                                <div class="card-img">
-                                    <a href="#">
-                                        <img src="img/card-item-img.jpg" alt="">
-                                    </a>
-                                </div>
-                                <!-- /.card-img -->
-                                <div class="card-description d-flex">
-                                    <div class="card-item-info">
-                                        <a href="#" class="card-title">WISTIA Corporate</a>
-                                        <span class="card-category">WordPress</span>
-                                    </div>
-                                    <!-- /.card-item-info -->
-                                    <span class="card-price ml-auto">$59</span>
-                                </div>
-                                <!-- /.card-description -->
-                                <div class="card-author-info d-flex align-items-center">
-                                    <div class="card-author d-flex align-items-center">
-                                        <img src="img/user-avatar.png" alt="">
-                                        <span>PsdBosS</span>
-                                    </div>
-                                    <!-- /.card-author -->
-                                    <ul class="product-rating ml-auto align-self-start">
-                                        <li><i class="fas fa-star"></i></li>
-                                        <li><i class="fas fa-star"></i></li>
-                                        <li><i class="fas fa-star"></i></li>
-                                        <li><i class="fas fa-star"></i></li>
-                                        <li><i class="fas fa-star"></i></li>
-                                    </ul>
-                                    <!-- /.product-rating -->
-                                    <span class="product-reviews-count">05</span>
-                                </div>
-                                <!-- /.card-author-info -->
-                            </div>
-                            <!-- /.card -->
-                        </div>
-                        <!-- /.col-lg-3 -->
-                        <div class="col-lg-3">
-                            <div class="card bg-white">
-                                <div class="card-img">
-                                    <a href="#">
-                                        <img src="img/card-item-img.jpg" alt="">
-                                    </a>
-                                </div>
-                                <!-- /.card-img -->
-                                <div class="card-description d-flex">
-                                    <div class="card-item-info">
-                                        <a href="#" class="card-title">Food Menu</a>
-                                        <span class="card-category">Plugins</span>
-                                    </div>
-                                    <!-- /.card-item-info -->
-                                    <span class="card-price ml-auto">$15</span>
-                                </div>
-                                <!-- /.card-description -->
-                                <div class="card-author-info d-flex align-items-center">
-                                    <div class="card-author d-flex align-items-center">
-                                        <img src="img/user-avatar.png" alt="">
-                                        <span>Gimsz</span>
-                                    </div>
-                                    <!-- /.card-author -->
-                                    <ul class="product-rating ml-auto align-self-start">
-                                        <li><i class="fas fa-star"></i></li>
-                                        <li><i class="fas fa-star"></i></li>
-                                        <li><i class="fas fa-star"></i></li>
-                                        <li><i class="fas fa-star"></i></li>
-                                        <li><i class="fas fa-star"></i></li>
-                                    </ul>
-                                    <!-- /.product-rating -->
-                                    <span class="product-reviews-count">05</span>
-                                </div>
-                                <!-- /.card-author-info -->
-                            </div>
-                            <!-- /.card -->
-                        </div>
-                        <!-- /.col-lg-3 -->
-                        <div class="col-lg-3">
-                            <div class="card bg-white">
-                                <div class="card-img">
-                                    <a href="#">
-                                        <img src="img/card-item-img.jpg" alt="">
-                                    </a>
-                                </div>
-                                <!-- /.card-img -->
-                                <div class="card-description d-flex">
-                                    <div class="card-item-info">
-                                        <a href="#" class="card-title">Grand Ballet-Dance</a>
-                                        <span class="card-category">PSD Template</span>
-                                    </div>
-                                    <!-- /.card-item-info -->
-                                    <span class="card-price ml-auto">$12</span>
-                                </div>
-                                <!-- /.card-description -->
-                                <div class="card-author-info d-flex align-items-center">
-                                    <div class="card-author d-flex align-items-center">
-                                        <img src="img/user-avatar.png" alt="">
-                                        <span>Greenta</span>
-                                    </div>
-                                    <!-- /.card-author -->
-                                    <ul class="product-rating ml-auto align-self-start">
-                                        <li><i class="fas fa-star"></i></li>
-                                        <li><i class="fas fa-star"></i></li>
-                                        <li><i class="fas fa-star"></i></li>
-                                        <li><i class="fas fa-star"></i></li>
-                                        <li><i class="fas fa-star"></i></li>
-                                    </ul>
-                                    <!-- /.product-rating -->
-                                    <span class="product-reviews-count">05</span>
-                                </div>
-                                <!-- /.card-author-info -->
-                            </div>
-                            <!-- /.card -->
-                        </div>
-                        <!-- /.col-lg-3 -->
-                        <div class="col-lg-3">
-                            <div class="card bg-white">
-                                <div class="card-img">
-                                    <a href="#">
-                                        <img src="img/card-item-img.jpg" alt="">
-                                    </a>
-                                </div>
-                                <!-- /.card-img -->
-                                <div class="card-description d-flex">
-                                    <div class="card-item-info">
-                                        <a href="#" class="card-title">WISTIA Corporate</a>
-                                        <span class="card-category">WordPress</span>
-                                    </div>
-                                    <!-- /.card-item-info -->
-                                    <span class="card-price ml-auto">$59</span>
-                                </div>
-                                <!-- /.card-description -->
-                                <div class="card-author-info d-flex align-items-center">
-                                    <div class="card-author d-flex align-items-center">
-                                        <img src="img/user-avatar.png" alt="">
-                                        <span>PsdBosS</span>
-                                    </div>
-                                    <!-- /.card-author -->
-                                    <ul class="product-rating ml-auto align-self-start">
-                                        <li><i class="fas fa-star"></i></li>
-                                        <li><i class="fas fa-star"></i></li>
-                                        <li><i class="fas fa-star"></i></li>
-                                        <li><i class="fas fa-star"></i></li>
-                                        <li><i class="fas fa-star"></i></li>
-                                    </ul>
-                                    <!-- /.product-rating -->
-                                    <span class="product-reviews-count">05</span>
-                                </div>
-                                <!-- /.card-author-info -->
-                            </div>
-                            <!-- /.card -->
-                        </div>
-                        <!-- /.col-lg-3 -->
-                        <div class="col-lg-3">
-                            <div class="card bg-white">
-                                <div class="card-img">
-                                    <a href="#">
-                                        <img src="img/card-item-img.jpg" alt="">
-                                    </a>
-                                </div>
-                                <!-- /.card-img -->
-                                <div class="card-description d-flex">
-                                    <div class="card-item-info">
-                                        <a href="#" class="card-title">WISTIA Corporate</a>
-                                        <span class="card-category">WordPress</span>
-                                    </div>
-                                    <!-- /.card-item-info -->
-                                    <span class="card-price ml-auto">$59</span>
-                                </div>
-                                <!-- /.card-description -->
-                                <div class="card-author-info d-flex align-items-center">
-                                    <div class="card-author d-flex align-items-center">
-                                        <img src="img/user-avatar.png" alt="">
-                                        <span>PsdBosS</span>
-                                    </div>
-                                    <!-- /.card-author -->
-                                    <ul class="product-rating ml-auto align-self-start">
-                                        <li><i class="fas fa-star"></i></li>
-                                        <li><i class="fas fa-star"></i></li>
-                                        <li><i class="fas fa-star"></i></li>
-                                        <li><i class="fas fa-star"></i></li>
-                                        <li><i class="fas fa-star"></i></li>
-                                    </ul>
-                                    <!-- /.product-rating -->
-                                    <span class="product-reviews-count">05</span>
-                                </div>
-                                <!-- /.card-author-info -->
-                            </div>
-                            <!-- /.card -->
-                        </div>
-                        <!-- /.col-lg-3 -->
-                        <div class="col-lg-3">
-                            <div class="card bg-white">
-                                <div class="card-img">
-                                    <a href="#">
-                                        <img src="img/card-item-img.jpg" alt="">
-                                    </a>
-                                </div>
-                                <!-- /.card-img -->
-                                <div class="card-description d-flex">
-                                    <div class="card-item-info">
-                                        <a href="#" class="card-title">WISTIA Corporate</a>
-                                        <span class="card-category">WordPress</span>
-                                    </div>
-                                    <!-- /.card-item-info -->
-                                    <span class="card-price ml-auto">$59</span>
-                                </div>
-                                <!-- /.card-description -->
-                                <div class="card-author-info d-flex align-items-center">
-                                    <div class="card-author d-flex align-items-center">
-                                        <img src="img/user-avatar.png" alt="">
-                                        <span>PsdBosS</span>
-                                    </div>
-                                    <!-- /.card-author -->
-                                    <ul class="product-rating ml-auto align-self-start">
-                                        <li><i class="fas fa-star"></i></li>
-                                        <li><i class="fas fa-star"></i></li>
-                                        <li><i class="fas fa-star"></i></li>
-                                        <li><i class="fas fa-star"></i></li>
-                                        <li><i class="fas fa-star"></i></li>
-                                    </ul>
-                                    <!-- /.product-rating -->
-                                    <span class="product-reviews-count">05</span>
-                                </div>
-                                <!-- /.card-author-info -->
-                            </div>
-                            <!-- /.card -->
-                        </div>
-                        <!-- /.col-lg-3 -->
-                    </div>
-                    <!-- /.row -->
-                </div>
-                <!-- /.all-items-wrap -->
+                
             </div>
             <!-- /.container-fluid -->
         </section>
