add style for dropdown, add text for first dropdown

--- a/app/all-items.html
+++ b/app/all-items.html
@@ -54,6 +54,34 @@
                                 <i class="far fa-bell ml-auto"></i>
                             </a>
                             <!-- /.dropdown-notify-item -->
+                            <a href="#" class="dropdown-notify-item d-flex">
+                                <div class="notify-item-avatar">
+                                    <img src="img/notify-avatar.png" alt="">
+                                </div>
+                                <!-- /.notify-item-avatar -->
+                                <div class="notify-item-info">
+                                    <h6>Need WP Help!</h6>
+                                    <span class="notify-date">26 Nov, 2016</span>
+                                    <!-- /.notify-date -->
+                                </div>
+                                <!-- /.notify-item-info -->
+                                <i class="far fa-bell ml-auto"></i>
+                            </a>
+                            <!-- /.dropdown-notify-item -->
+                            <a href="#" class="dropdown-notify-item d-flex">
+                                <div class="notify-item-avatar">
+                                    <img src="img/notify-avatar.png" alt="">
+                                </div>
+                                <!-- /.notify-item-avatar -->
+                                <div class="notify-item-info">
+                                    <h6>Psd Template Help!</h6>
+                                    <span class="notify-date">26 Nov, 2016</span>
+                                    <!-- /.notify-date -->
+                                </div>
+                                <!-- /.notify-item-info -->
+                                <i class="far fa-bell ml-auto"></i>
+                            </a>
+                            <!-- /.dropdown-notify-item -->
                         </div>
                         <!-- dropdown-menu -->
                     </div>
