--- a/app/all-items.html
+++ b/app/all-items.html
@@ -40,7 +40,7 @@
                         </div>
                         <!-- /.dropdown-control -->
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
-                            <a href="#" class="dropdown-notify-item d-flex">
+                            <a href="#" class="dropdown-notify-item d-flex align-items-center">
                                 <div class="notify-item-avatar">
                                     <img src="img/notify-avatar.png" alt="">
                                 </div>
@@ -51,10 +51,10 @@
                                     <!-- /.notify-date -->
                                 </div>
                                 <!-- /.notify-item-info -->
-                                <i class="far fa-bell ml-auto"></i>
+                                <i class="far fa-bell ml-auto align-self-start"></i>
                             </a>
                             <!-- /.dropdown-notify-item -->
-                            <a href="#" class="dropdown-notify-item d-flex">
+                            <a href="#" class="dropdown-notify-item d-flex align-items-center">
                                 <div class="notify-item-avatar">
                                     <img src="img/notify-avatar.png" alt="">
                                 </div>
@@ -65,10 +65,10 @@
                                     <!-- /.notify-date -->
                                 </div>
                                 <!-- /.notify-item-info -->
-                                <i class="far fa-bell ml-auto"></i>
+                                <i class="far fa-bell ml-auto align-self-start"></i>
                             </a>
                             <!-- /.dropdown-notify-item -->
-                            <a href="#" class="dropdown-notify-item d-flex">
+                            <a href="#" class="dropdown-notify-item d-flex align-items-center">
                                 <div class="notify-item-avatar">
                                     <img src="img/notify-avatar.png" alt="">
                                 </div>
@@ -79,7 +79,7 @@
                                     <!-- /.notify-date -->
                                 </div>
                                 <!-- /.notify-item-info -->
-                                <i class="far fa-bell ml-auto"></i>
+                                <i class="far fa-bell ml-auto align-self-start"></i>
                             </a>
                             <!-- /.dropdown-notify-item -->
                         </div>
@@ -87,28 +87,147 @@
                     </div>
                     <!-- /.dropdown-item -->
                     <div class="dropdown-item">
-                        <div class="dropdown-control d-flex">
+                        <div class="dropdown-control d-flex" id="dropdownMenuLink" data-toggle="dropdown">
                             <i class="far fa-envelope mx-auto my-auto"></i>
                             <span class="notify-count bg-orange">5</span>
                         </div>
                         <!-- /.dropdown-control -->
+                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
+                            <a href="#" class="dropdown-notify-item d-flex align-items-center">
+                                <div class="notify-item-avatar">
+                                    <img src="img/notify-avatar.png" alt="">
+                                </div>
+                                <!-- /.notify-item-avatar -->
+                                <div class="notify-item-info">
+                                    <span class="notify-author">Kazi Fahim</span>
+                                    <h6>Need WP Help!</h6>
+                                    <span class="notify-date">01 Dec, 2016</span>
+                                    <!-- /.notify-date -->
+                                </div>
+                                <!-- /.notify-item-info -->
+                                <i class="far fa-envelope ml-auto align-self-start"></i>
+                            </a>
+                            <!-- /.dropdown-notify-item -->
+                            <a href="#" class="dropdown-notify-item d-flex align-items-center">
+                                <div class="notify-item-avatar">
+                                    <img src="img/notify-avatar.png" alt="">
+                                </div>
+                                <!-- /.notify-item-avatar -->
+                                <div class="notify-item-info">
+                                    <span class="notify-author">Richi Lenal</span>
+                                    <h6>Need WP Help!</h6>
+                                    <span class="notify-date">26 Nov, 2016</span>
+                                    <!-- /.notify-date -->
+                                </div>
+                                <!-- /.notify-item-info -->
+                                <i class="far fa-envelope ml-auto align-self-start"></i>
+                            </a>
+                            <!-- /.dropdown-notify-item -->
+                            <a href="#" class="dropdown-notify-item d-flex align-items-center">
+                                <div class="notify-item-avatar">
+                                    <img src="img/notify-avatar.png" alt="">
+                                </div>
+                                <!-- /.notify-item-avatar -->
+                                <div class="notify-item-info">
+                                    <span class="notify-author">PsdBosS</span>
+                                    <h6>Psd Template Help!</h6>
+                                    <span class="notify-date">26 Nov, 2016</span>
+                                    <!-- /.notify-date -->
+                                </div>
+                                <!-- /.notify-item-info -->
+                                <i class="fas fa-reply ml-auto align-self-start"></i>
+                            </a>
+                            <!-- /.dropdown-notify-item -->
+                        </div>
+                        <!-- dropdown-menu -->
                     </div>
                     <!-- /.dropdown-item -->
                     <div class="dropdown-item">
-                        <div class="dropdown-control d-flex">
+                        <div class="dropdown-control d-flex" id="dropdownMenuLink" data-toggle="dropdown">
                             <i class="fas fa-shopping-cart mx-auto my-auto"></i>
                             <span class="notify-count bg-green">8</span>
                         </div>
                         <!-- /.dropdown-control -->
+                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
+                            <a href="#" class="dropdown-notify-item d-flex align-items-center">
+                                <div class="notify-card-img">
+                                    <img src="img/notify-card-img.jpg" alt="">
+                                </div>
+                                <!-- /.notify-card-img -->
+                                <div class="notify-item-info">
+                                    <span class="notify-product">Grand Ballet</span>
+                                    <h6>WordPress</h6>
+                                    <span class="notify-price">$59</span>
+                                    <!-- /.notify-date -->
+                                </div>
+                                <!-- /.notify-item-info -->
+                            </a>
+                            <!-- /.dropdown-notify-item -->
+                            <a href="#" class="dropdown-notify-item d-flex align-items-center">
+                                <div class="notify-card-img">
+                                    <img src="img/notify-card-img.jpg" alt="">
+                                </div>
+                                <!-- /.notify-card-img -->
+                                <div class="notify-item-info">
+                                    <span class="notify-product">Apple Device</span>
+                                    <h6>WordPress</h6>
+                                    <span class="notify-price">$59</span>
+                                    <!-- /.notify-date -->
+                                </div>
+                                <!-- /.notify-item-info -->
+                            </a>
+                            <!-- /.dropdown-notify-item -->
+                            <div class="dropdown-notify-total d-flex">
+                                <span>Total</span>
+                                <span class="ml-auto">$118</span>
+                            </div>
+                            <!-- /.dropdown-notify-total -->
+                            <div class="dropdown-btn-wrap">
+                                <a href="#" class="btn btn-to-card bg-green">Go To Card</a>
+                                <a href="#" class="btn btn-to-checkout bg-red">Go To Checkout</a>
+                            </div>
+                            <!-- /.dropdown-btn-wrap -->
+                        </div>
+                        <!-- dropdown-menu -->
                     </div>
                     <!-- /.dropdown-item -->
-                    <div class="user-dropdown-control d-flex align-items-center">
-                        <img src="img/user-avatar.png" alt="" class="user-avatar">
-                        <div class="user-info-wrap">
-                            <h6 class="user-name">Mike Hussy <i class="fas fa-chevron-down"></i></h6>
-                            <span class="balance">$171.00</span>
+                    <div class="user-dropdown-control">
+                        <div class="dropdown-list d-flex align-items-center" id="dropdownMenuLink" data-toggle="dropdown">
+                            <img src="img/user-avatar.png" alt="" class="user-avatar">
+                            <div class="user-info-wrap">
+                                <h6 class="user-name">Mike Hussy <i class="fas fa-chevron-down"></i></h6>
+                                <span class="balance">$171.00</span>
+                            </div>
+                            <!-- /.user-info-wrap -->
                         </div>
-                        <!-- /.user-info-wrap -->
+                        <!-- /dropdown-list -->
+                        <ul class="dropdown-menu dropdown-menu-list" aria-labelledby="dropdownMenuLink">
+                            <li>
+                                <a href=""><i class="fas fa-chevron-right"></i>Profile page</a>
+                            </li>
+                            <li>
+                                <a href=""><i class="fas fa-chevron-right"></i>Portfolio</a>
+                            </li>
+                            <li>
+                                <a href=""><i class="fas fa-chevron-right"></i>Account Setting</a>
+                            </li>
+                            <li>
+                                <a href=""><i class="fas fa-chevron-right"></i>Downloads</a>
+                            </li>
+                            <li>
+                                <a href=""><i class="fas fa-chevron-right"></i>Wishlist</a>
+                            </li>
+                            <li>
+                                <a href=""><i class="fas fa-chevron-right"></i>Upload Item</a>
+                            </li>
+                            <li>
+                                <a href=""><i class="fas fa-chevron-right"></i>Statement</a>
+                            </li>
+                            <li>
+                                <a href=""><i class="fas fa-chevron-right"></i>Withdraws</a>
+                            </li>
+                        </ul>
+                        <!-- /.dropdown-menu -->
                     </div>
                     <!-- /.user-dropdown-control -->
                     <button class="btn small-btn bg-red">Logout</button>
